Switched from markdown to mdx doc files

--- a/docs/components/real-time-decision-support/real-time-notifications.mdx
+++ b/docs/components/real-time-decision-support/real-time-notifications.mdx
@@ -8,9 +8,7 @@ coverY: 203.93538913362704
 
 # 🤖 Optomitron Real-Time Decision Support Plugin
 
-{% embed url="https://youtu.be/hd50A74o8YI" %}
-Optomitron in Action
-{% endembed %}
+[![Click Here for Demo Video](images/optimitron-ai-assistant.png)](https://youtu.be/hd50A74o8YI)
 
 #### [DEMO WEBSITE](https://demo.quantimo.do/dev/src/index.html#/app/chat)
 
