--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -7,7 +7,7 @@
 1. **Define Project Scope and Goals:** Clearly outline what the Decentralized FDA aims to achieve, its target audience, and its core mission.
 2. **Framing and Naming:** Develop a strong framing narrative and decide on a compelling name for the initiative.
 3. **Identify Target Audience:** List potential board members, disease advocacy organizations, and other key stakeholders.
-4. **Initial Stakeholder Engagement:** Begin outreach to potential board members and key stakeholders to introduce them to the project and gauge interest.
+4. **Initial Stakeholder Engagement:** Begin outreach to potential board members and key stakeholders to introduce them to the project and gauge interest.r
 
 
 ## 2: Building the Board of Directors
@@ -54,3 +54,77 @@
 
 
 ## 6: Creating the Clinipedia dFDA Wiki
+
+Creating Clinipedia, a comprehensive and reliable online resource for clinical research, requires careful planning and execution. The following list outlines the key milestones and tasks that need to be completed:
+
+### Project Initialization
+1. **Conceptualization and Scope Definition**
+- Define the project's goals, scope, and intended audience.
+- Research similar platforms for insights and lessons learned.
+
+2. **Feasibility Study**
+- Conduct a feasibility study to assess technical, financial, and operational aspects.
+- Identify potential challenges and solutions.
+
+3. **Stakeholder Engagement**
+- Engage with healthcare professionals, researchers, and potential users for input.
+- Form a steering committee for guidance and decision-making.
+
+### Development Phase
+4. **Platform Design and Architecture**
+- Decide on the technical architecture, including the database, server, and user interface design.
+- Design the website layout and user experience.
+
+5. **Software Development**
+- Develop the modified MediaWiki platform with enhanced metadata storage.
+- Implement AI-powered research tools for data aggregation.
+
+6. **Content Management System**
+- Develop a robust editing authorization system.
+- Create guidelines and protocols for content creation and editing.
+
+7. **Data Integration**
+- Compile a comprehensive directory of data sources.
+- Integrate external databases and sources into the platform.
+
+### Testing and Quality Assurance
+8. **Platform Testing**
+- Conduct thorough testing, including functionality, usability, and security tests.
+- Perform beta testing with a select user group for feedback.
+
+9. **Content Verification**
+- Initiate a process for verifying and validating the initial content.
+- Establish a continuous content review and update mechanism.
+
+### Launch and Expansion
+10. **Official Launch**
+   - Launch the platform officially with an initial set of data and features.
+   - Organize an outreach campaign to promote the platform.
+
+11. **Community Building**
+   - Encourage user registration and participation.
+   - Establish forums or discussion boards for user interaction and feedback.
+
+### Continuous Improvement and Scaling
+12. **Feedback and Iterative Improvement**
+   - Collect and analyze user feedback for improvements.
+   - Implement regular updates and feature enhancements.
+
+13. **Expanding the Database and Features**
+   - Continuously expand the database with new research and data.
+   - Integrate additional features like outcome labels and meta-analysis publication.
+
+14. **Partnerships and Collaboration**
+   - Establish partnerships with research institutions, healthcare bodies, and industry experts.
+   - Collaborate on shared goals and data exchange.
+
+### Long-Term Sustainability
+15. **Funding and Resource Management**
+   - Secure ongoing funding for operational sustainability.
+   - Manage resources effectively, including human, financial, and technical resources.
+
+16. **Monitoring and Evaluation**
+   - Regularly monitor the platform's performance and impact.
+   - Evaluate the achievement of objectives and make adjustments as needed.
+
+By methodically addressing these milestones and tasks, Clinipedia can be developed into a valuable and trusted resource for clinical research and health information.
