Update content and links in introduction.mdx
This commit removes a duplicate card about data analysis in the introduction. It also slightly modifies the text of two other cards for more appropriate semantics. Links and icons for the community and support sections have been updated to redirect users to the project's GitHub page.

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -69,25 +69,18 @@ Leverage the FDAi API to build powerful applications and integrate data insights
     Gain insights from your data using the FDAi analysis endpoints
   </Card>
   <Card
-    title="Analyze Data"
-    icon="magnifying-glass-chart"
-    href="/guides/analyzing-data"
-  >
-    Gain insights from your data using the FDAi analysis endpoints
-  </Card>
-  <Card
     title="Create Studies"
     icon="flask"
     href="/guides/creating-studies"
   >
-    Design and conduct studies using the FDAi API's study management features
+    Create studies using the FDAi API's study management features
   </Card>
   <Card
     title="Explore Use Cases"
     icon="lightbulb"
     href="/use-cases"
   >
-    Discover real-world applications and success stories powered by FDAi
+    Discover real-world applications powered by FDAi
   </Card>
 </CardGroup>
 
@@ -98,16 +91,16 @@ Connect with the FDAi community and get the support you need.
 <CardGroup cols={2}>
   <Card
     title="Join the Community"
-    icon="discord"
-    href="https://curedao.org/discord"
+    icon="user-group"
+    href="https://github.com/FDA-AI/FDAi/discussions"
   >
     Engage with other developers, share ideas, and get help from the community
   </Card>
   <Card
     title="Contact Support"
-    icon="envelope"
-    href="mailto:hi@crowdsourcingcures.org"
+    icon="circle-question"
+    href="https://github.com/FDA-AI/FDAi/issues"
   >
-    Reach out to our support team for any questions or assistance
+    Reach out for any questions or assistance
   </Card>
 </CardGroup>
