Update API documentation
This commit mainly revises the API reference, updating the terminology and content, including operation descriptions, parameter changes, and schema definitions. Also, significant changes were made to the navigation layout, groups were arranged to better organize the pages, some elements were removed and new ones added.

--- a/docs/api-reference/introduction.mdx
+++ b/docs/api-reference/introduction.mdx
@@ -11,7 +11,7 @@ description: 'Introduction to the FDAi API and how to get started'
 
 The FDAi API provides a comprehensive set of endpoints for tracking measurements, analyzing data, managing studies, and more. With the FDAi API, you can:
 
-- Track and manage user measurements
+- Record and manage user measurements
 - Retrieve user-specific analysis settings and statistics
 - Create and join studies
 - Access and manipulate variables and units
