Add new guides and code snippets to documentation
This commit includes the creation of new user guides and related code snippets. These guides cover actions such as creating a user, recording measurements, and getting variables in the FDAi API. Furthermore, changes were made to provide more context in the API reference. The documentation navigation in mint.json was also adjusted to reflect the guide updates. A few refactoring moves were also done to rename certain API references.

--- a/docs/api-reference/introduction.mdx
+++ b/docs/api-reference/introduction.mdx
@@ -25,33 +25,20 @@ The FDAi API provides a comprehensive set of endpoints for tracking measurements
   Explore the OpenAPI specification file
 </Card>
 
-## Authentication
+## Back End Authentication for Creating Users
 
 To authenticate your requests to the FDAi API, you need to include the following headers:
 
-- `X-CLIENT-ID`: Your client ID obtained from the [FDAi Developer Portal](https://developer.fdai.earth).
-- `X-CLIENT-SECRET`: Your client secret obtained from the [FDAi Developer Portal](https://developer.fdai.earth).
+- `X-CLIENT-ID`: Your client ID obtained from the [FDAi Developer Portal](https://builder.fdai.earth).
+- `X-CLIENT-SECRET`: Your client secret obtained from the [FDAi Developer Portal](https://builder.fdai.earth).
 
 Make sure to keep your client credentials secure and do not share them publicly.
 
-```json
-"securitySchemes": {
-  "ClientCredentials": {
-    "type": "apiKey",
-    "in": "header",
-    "name": "X-CLIENT-ID"
-  },
-  "ClientSecret": {
-    "type": "apiKey",
-    "in": "header",
-    "name": "X-CLIENT-SECRET"
-  }
-}
-```
+
 <Card
   title="Authentication Guide"
   icon="lock"
-  href="/guides/authentication"
+  href="/guides/create-user"
 >
 Learn more about authenticating with the FDAi API
 </Card>
@@ -71,4 +58,4 @@ Start building your application by making requests to the FDAi API endpoints usi
 Get up and running quickly with the FDAi API
 </Card>
 
-If you have any questions or need assistance, feel free to reach out on GitHub.
+If you have any questions or need assistance, feel free to [create an issue](https://github.com/FDA-AI/FDAi/issues/new)
