--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -43,21 +43,21 @@ Leverage the FDAi API to build powerful applications and integrate data insights
   <Card
     title="Create a User"
     icon="user"
-    href="/api-reference/user/post-user"
+    href="/guides/create-user"
   >
     The first step to interact with the FDAi API is to create an FDAi user linked to the user in your system
   </Card>
   <Card
     title="Create Measurements"
     icon="chart-line"
-    href="/guides/tracking-measurements"
+    href="/guides/record-measurements"
   >
     Learn how to record and manage measurements using the FDAi API
   </Card>
   <Card
-    title="Measurements"
+    title="Get Measurements"
     icon="chart-line"
-    href="/guides/tracking-measurements"
+    href="/guides/getting-measurements"
   >
     Learn how to record and manage measurements using the FDAi API
   </Card>
