Massive API doc cleanup

--- a/docs/api-docs/api-reference/introduction.mdx
+++ b/docs/api-docs/api-reference/introduction.mdx
@@ -38,7 +38,7 @@ Make sure to keep your client credentials secure and do not share them publicly.
 <Card
   title="Authentication Guide"
   icon="lock"
-  href="/guides/create-user"
+  href="/guides/get-access-token"
 >
 Learn more about authenticating with the FDAi API
 </Card>
@@ -50,12 +50,5 @@ Sign up for an FDAi account at https://builder.fdai.earth to obtain your API cre
 Explore the API endpoints and their functionalities in the API Reference section.
 Check out the Guides section for tutorials and examples on how to use the FDAi API for various use cases.
 Start building your application by making requests to the FDAi API endpoints using your client credentials.
-<Card
-  title="Quickstart Guide"
-  icon="rocket"
-  href="/guides/quickstart"
->
-Get up and running quickly with the FDAi API
-</Card>
 
 If you have any questions or need assistance, feel free to [create an issue](https://github.com/FDA-AI/FDAi/issues/new)
