--- a/docs/api-docs/introduction.mdx
+++ b/docs/api-docs/introduction.mdx
@@ -43,7 +43,7 @@ Leverage the FDAi API to build powerful applications and integrate data insights
   <Card
     title="Create a User"
     icon="user"
-    href="/guides/create-user"
+    href="/guides/get-access-token"
   >
     The first step to interact with the FDAi API is to create an FDAi user linked to the user in your system
   </Card>
@@ -57,30 +57,16 @@ Leverage the FDAi API to build powerful applications and integrate data insights
   <Card
     title="Get Measurements"
     icon="chart-line"
-    href="/guides/getting-measurements"
+    href="/guides/get-measurements"
   >
     Learn how to record and manage measurements using the FDAi API
   </Card>
   <Card
-    title="Analyze Data"
-    icon="magnifying-glass-chart"
-    href="/guides/analyzing-data"
-  >
-    Gain insights from your data using the FDAi analysis endpoints
-  </Card>
-  <Card
-    title="Create Studies"
+    title="Create a Study"
     icon="flask"
-    href="/guides/creating-studies"
+    href="/guides/create-study"
   >
     Create studies using the FDAi API's study management features
-  </Card>
-  <Card
-    title="Explore Use Cases"
-    icon="lightbulb"
-    href="/use-cases"
-  >
-    Discover real-world applications powered by FDAi
   </Card>
 </CardGroup>
 
