--- a/docs/api-docs/api-reference/introduction.mdx
+++ b/docs/api-docs/api-reference/introduction.mdx
@@ -27,10 +27,10 @@ The FDAi API provides a comprehensive set of endpoints for tracking measurements
 
 ## Back End Authentication for Creating Users
 
-To authenticate your requests to the FDAi API, you need to include the following headers:
+To authenticate your requests to the API, you need to include the following headers:
 
-- `X-CLIENT-ID`: Your client ID obtained from the [FDAi Developer Portal](https://builder.fdai.earth).
-- `X-CLIENT-SECRET`: Your client secret obtained from the [FDAi Developer Portal](https://builder.fdai.earth).
+- `X-CLIENT-ID`: Your client ID obtained from the [Developer Portal](https://builder.dfda.earth).
+- `X-CLIENT-SECRET`: Your client secret obtained from the [Developer Portal](https://builder.dfda.earth).
 
 Make sure to keep your client credentials secure and do not share them publicly.
 
@@ -46,7 +46,7 @@ Learn more about authenticating with the FDAi API
 Getting Started
 To start using the FDAi API, follow these steps:
 
-Sign up for an FDAi account at https://builder.fdai.earth to obtain your API credentials.
+Sign up for an account at https://builder.dfda.earth to obtain your API credentials.
 Explore the API endpoints and their functionalities in the API Reference section.
 Check out the Guides section for tutorials and examples on how to use the FDAi API for various use cases.
 Start building your application by making requests to the FDAi API endpoints using your client credentials.
