--- a/docs/api-docs/introduction.mdx
+++ b/docs/api-docs/introduction.mdx
@@ -22,9 +22,9 @@ To start using the FDAi API, follow these steps:
   <Card
     title="Create a Developer Account"
     icon="user-plus"
-    href="https://builder.fdai.earth"
+    href="https://builder.dfda.earth"
   >
-    Sign up for an FDAi account to get your API credentials
+    Sign up for an account to get your API credentials
   </Card>
   <Card
     title="Explore the API"
